# cg_chatbot

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: install_and_healthcheck.yaml
docs/: cully-grove-declaration-and-bylaws-recorded-ocr.md
src/cg_chatbot/: cg_chatbot.py  constants.py  endpoints.py  graph_nodes.py  ingest.py  prompts.py  termutils.py
systemd/: cg_chatbot.service  launch.zsh
