[project]
name = "cg-chatbot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nickolas Fotopoulos", email = "nickolas.fotopoulos@gmail.com" },
]
dependencies = [
    "langchain>=0.3.13",
    "langchain-chroma>=0.1.4",
    "langchain-nomic>=0.1.4",
    "langchain-text-splitters>=0.3.4",
    "langgraph>=0.2.60",
    "langchain-community>=0.3.13",
    "gpt4all>=2.8.2",
    "langchain-ollama>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
ingest = "cg_chatbot:ingest.main"
cg_chatbot = "cg_chatbot:cg_chatbot.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cg_chatbot"]
